# foodatlas

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  README.md  foodatlas.code-workspace  mutagen.yml.example  pyproject.toml
backend/api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/api/scripts/: push-to-ecr.sh
backend/api/src/: __init__.py  app.py  config.py  dependencies.py
backend/api/src/repositories/: __init__.py  chemical.py  disease.py  downloads.py  food.py  formatting.py  search.py  taxonomy.py  trust_filter.py
backend/api/src/routes/: chemical.py  disease.py  download.py  food.py  metadata.py  resolve.py
backend/api/tests/: conftest.py  test_config.py  test_dependencies.py  test_example.py  test_health.py  test_repo_downloads.py  test_repo_food.py  test_repo_other.py  test_repo_taxonomy.py  test_repo_trust_filter.py  test_routes_food.py  test_routes_other.py  test_routes_taxonomy.py
backend/ie/: .gitignore  README.md  main.py  pyproject.toml
backend/ie/data/: .gitignore  food_terms.txt  translated_food_terms.txt
backend/ie/outputs/biobert_binary_prod/: download.sh
backend/ie/outputs/past_sentence_filtering_preds/: download.sh
backend/ie/outputs/text_parser/: last_search_date.txt
backend/ie/scripts/: run_pipeline.sh  train_biobert_binary.sh
backend/ie/scripts/biobert_binary_prod/: download.sh
backend/ie/src/: __init__.py  runner.py  stages.py
backend/ie/src/Lit2_KG/: 0_update_PMC_BioC.py  1_search_pubmed_pmc.py  2_run_sentence_filtering.py  3_aggregate_sentence_filtering_results.py  4_run_infomation_extraction.py  5_parse_text_parser_predictions.py  information_extraction_model_config.py
backend/ie/src/Lit2_KG/biobert/: model.py  train.py
backend/ie/src/Lit2_KG/openai/: model.py
backend/ie/src/config/: defaults.json
backend/ie/src/lit2kg/: 0_update_PMC_BioC.py  1_search_pubmed_pmc.py  2_run_sentence_filtering.py  4_run_information_extraction.py  __init__.py  information_extraction_model_config.py  pubmed_search.py
backend/ie/src/lit2kg/biobert/: train.py
backend/ie/src/lit2kg/openai/: model.py
backend/ie/src/models/: __init__.py  settings.py
backend/ie/src/pipeline/: __init__.py  runner.py  stages.py
backend/ie/src/pipeline/corpus/: __init__.py
backend/ie/src/pipeline/extraction/: __init__.py  parse_predictions.py  runner.py
backend/ie/tests/: test_aggregate.py  test_biobert_model.py  test_biobert_train.py  test_ie_extraction.py  test_openai_model.py  test_parse_predictions.py  test_pubmed_search.py  test_pubmed_search_extended.py  test_runner.py  test_sentence_retrieval.py  test_sentence_retrieval_extended.py  test_step_scripts.py  test_update_pmc.py  test_update_pmc_extended.py
backend/kgc/: .gitignore  README.md  main.py  pyproject.toml
backend/kgc/data/: .gitignore  README.md
backend/kgc/release_notes/: v4.0.md
backend/kgc/scripts/: _lib.sh  publish-bundle.sh  pull-data-from-s3.sh  pull-from-s3.sh  spot_check_food.py  sync-data-to-s3.sh  sync-outputs-to-s3.sh  sync-to-s3.sh
backend/kgc/src/: __init__.py
backend/kgc/src/config/: corrections.py  corrections.yaml  defaults.json  foodatlas_classifications.yaml
backend/kgc/src/construct/: README.md  __init__.py  corrections_applier.py  entity_resolver.py  entity_runner.py  ingest_loader.py  resolve_primary.py  resolve_secondary.py  runner.py  subtree_filter.py  triplet_builder.py  triplet_runner.py
backend/kgc/src/constructor/: __init__.py  disambiguation.py  knowledge_graph.py
backend/kgc/src/discovery/: __init__.py  cache.py  chemical.py  food.py  query.py
backend/kgc/src/entities/: __init__.py  chemical.py  food.py
backend/kgc/src/ingest/: protocol.py  runner.py
backend/kgc/src/ingest/adapters/: cdno.py  (+7 more)
backend/kgc/src/initialization/: __init__.py  scaffold.py
backend/kgc/src/integration/: __init__.py  fdc.py  scaffold.py
backend/kgc/src/models/: __init__.py  attestation.py  attributes.py  entity.py  evidence.py  extraction.py  ingest.py  metadata.py  relationship.py  settings.py  triplet.py  trust_signal.py  version.py
backend/kgc/src/pipeline/: __init__.py  checkpoint.py  ingest_loader.py  knowledge_graph.py  load_sources.py  runner.py  scaffold.py  stages.py
backend/kgc/src/postprocessing/: __init__.py  common_name.py  synonyms_display.py
backend/kgc/src/preprocessing/: __init__.py  chemical_conc.py  chemical_name.py  conc_converter.py  conc_parser.py  food_part.py
backend/kgc/src/stores/: __init__.py  attestation_store.py  entity_registry.py  entity_store.py  evidence_store.py  extraction_store.py  metadata_store.py  registry_diff.py  registry_seeder.py  schema.py  triplet_store.py
backend/kgc/src/utils/: __init__.py  constants.py  json_io.py  merge_sets.py  orphans.py  timing.py  unclassified.py
backend/kgc/tests/: conftest.py  test_adapt_triplets.py  test_ambiguity.py  test_attestation_store.py  test_chemical_conc.py  test_chemical_disease.py  test_chemical_entities.py  test_chemical_init.py  test_chemical_name.py  test_chemical_onto.py  test_classification.py  test_conc_converter.py  test_conc_parser.py  test_corrections.py  test_corrections_applier.py  test_disambiguation.py  test_enrichment.py  test_enrichment_grouping.py  test_entities.py  test_entity_lut.py  test_entity_registry.py  test_entity_resolver.py  test_entity_runner.py  test_evidence_store.py  test_extraction_store.py  test_food_classification.py  test_food_entities.py  test_food_init.py  test_food_onto.py  test_food_part.py  test_ie_loader.py  test_ie_report.py  test_ie_resolver.py  test_ie_runner.py  test_ingest_adapters.py  test_ingest_cdno.py  test_ingest_ctd.py  test_ingest_fdc.py  test_ingest_protocol.py  test_ingest_runner.py  (+47 more)
infra/aws/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
infra/aws/scripts/: _lib.sh
infra/aws/stacks/: api_stack.py  database_stack.py  downloads_stack.py  ecr_stack.py  jobs_stack.py  network_stack.py  storage_stack.py
infra/aws/tests/: test_api_stack.py  test_downloads_stack.py  test_jobs_stack.py  test_storage_stack.py
templates/python/: pyproject.toml
(+416 files in other folders)
