[project]
name = "foodatlas-ie"
version = "0.1.0"
description = "FoodAtlas information extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.18",
    "nltk>=3.8",
    "numpy>=1.26",
    "openai>=1.0",
    "pandas>=2.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "thefuzz>=0.22",
    "torch>=2.2",
    "tqdm>=4.66",
    "transformers>=4.40",
]

[tool.uv]
python-preference = "system"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "bandit>=1.8.0",
]

# PYTEST
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
filterwarnings = ["error", "ignore::DeprecationWarning"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
