[project]
name = "foodatlas-cdk"
version = "0.1.0"
description = "FoodAtlas AWS CDK infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.160.0",
    "constructs>=10.3.0",
]

[tool.uv]
python-preference = "system"
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "bandit>=1.8.0",
]

# PYTEST
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=stacks",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
filterwarnings = ["error", "ignore::DeprecationWarning"]
